package com.example.redisorm.core;

public interface EntityWithId<ID> {
    ID getId();
}